# dbtui

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/tui/: package.json  tsconfig.json
apps/tui/src/: App.tsx  index.tsx  theme.ts  types.ts
apps/tui/src/components/: ConnectModal.tsx  KeyBar.tsx  Panel.tsx  QueryList.tsx  QueryTable.tsx  QueryViewer.tsx  ResultsTable.tsx  StatusBar.tsx
apps/tui/src/hooks/: useEngine.ts  useInlineEdit.ts  useQueryMeta.ts
apps/tui/src/lib/: engine.ts  protocol.ts
apps/tui/src/screens/: MainScreen.tsx  QueryDetailScreen.tsx  QueryListScreen.tsx
crates/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: db.rs  main.rs  protocol.rs  scanner.rs
fixtures/sample-app/: .dbtui.json  index.ts  package.json  payments.ts  schema.sql  users.ts
