[package]
name = "dbtui-engine"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "dbtui-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
walkdir = "2"
